change dimensions name convention atrack,xtrack -> line,sample

--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -61,7 +61,7 @@
     "#filename=xsar.get_test_file('S1B_IW_GRDH_1SDV_20211024T051203_20211024T051228_029273_037E47_Z010.SAFE') # nices streaks\n",
     "#filename=xsar.get_test_file('S1A_IW_GRDH_1SDV_20170720T112706_20170720T112735_017554_01D5C2_Z010.SAFE') # subswath\n",
     "#filename = '/home/oarcher/SAFE/S1A_EW_GRDM_1SDV_20181009T234410_20181009T234510_024066_02A153_DB9C.SAFE'\n",
-    "sar_ds = xsar.open_dataset(filename,resolution='100m').isel(atrack=slice(20,None,None),xtrack=slice(20,None,None)) # isel to skip bad image edge\n",
+    "sar_ds = xsar.open_dataset(filename,resolution='100m').isel(line=slice(20,None,None),sample=slice(20,None,None)) # isel to skip bad image edge\n",
     "\n",
     "# add detrended sigma0\n",
     "sar_ds['sigma0_detrend'] = xsarsea.sigma0_detrend(sar_ds.sigma0, sar_ds.incidence)\n",
@@ -118,17 +118,17 @@
     "streaks = xr.merge([dict(angle=streaks_dir,weight=streaks_weight)]).drop('angles')\n",
     "\n",
     "\n",
-    "# convert from image convention (rad=0=atrack) to geographic convention (deg=0=north)\n",
+    "# convert from image convention (rad=0=line) to geographic convention (deg=0=north)\n",
     "# select needed variables in original dataset, and map them to streaks dataset\n",
     "streaks_geo = sar_ds[['longitude','latitude','ground_heading']].interp(\n",
-    "    atrack=streaks.atrack,\n",
-    "    xtrack=streaks.xtrack, \n",
+    "    line=streaks.line,\n",
+    "    sample=streaks.sample, \n",
     "    method='nearest')\n",
     "\n",
     "streaks_geo['weight'] = streaks['weight']\n",
     "\n",
     "# convert directions from image convention to geographic convention\n",
-    "streaks_geo['streaks_dir'] =  xsarsea.dir_xtrack_to_geo(streaks['angle'], streaks_geo['ground_heading']) \n",
+    "streaks_geo['streaks_dir'] =  xsarsea.dir_sample_to_geo(streaks['angle'], streaks_geo['ground_heading']) \n",
     "\n",
     "streaks_geo = streaks_geo.compute()\n",
     "\n",
@@ -167,7 +167,7 @@
     "\n",
     "`streaks_geo` is a `xarray.Dataset`, with `latitude`, `longitude` and `streaks_dir` (0=deg north) variables.\n",
     "\n",
-    "It has dims `('atrack', 'xtrack')`, with a spacing corresponding to the first windows size, according to the window step."
+    "It has dims `('line', 'sample')`, with a spacing corresponding to the first windows size, according to the window step."
    ]
   },
   {
@@ -187,7 +187,7 @@
    "source": [
     "### streaks\n",
     "\n",
-    "`streaks_geo` was computed from `streaks` (also a `xarray.Dataset`). The main difference is that the `angle` variable from `streaks` is in radians, in *image convention* (ie rad=0 is in xtrack direction) \n",
+    "`streaks_geo` was computed from `streaks` (also a `xarray.Dataset`). The main difference is that the `angle` variable from `streaks` is in radians, in *image convention* (ie rad=0 is in sample direction) \n",
     "\n"
    ]
   },
@@ -208,7 +208,7 @@
    "source": [
     "#### Convertion between image convention and geographic convention\n",
     "\n",
-    "see [xsarsea.dir_geo_to_xtrack](../basic_api.rst#xsarsea.dir_geo_to_xtrack) and [xsarsea.dir_xtrack_to_geo](../basic_api.rst#xsarsea.dir_xtrack_to_geo)\n",
+    "see [xsarsea.dir_geo_to_sample](../basic_api.rst#xsarsea.dir_geo_to_sample) and [xsarsea.dir_sample_to_geo](../basic_api.rst#xsarsea.dir_sample_to_geo)\n",
     "\n"
    ]
   },
@@ -251,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist_at = hist_mean_smooth['weight'].sel(atrack=5000,xtrack=12000,method='nearest')\n",
+    "hist_at = hist_mean_smooth['weight'].sel(line=5000,sample=12000,method='nearest')\n",
     "hv.Histogram( (hist_at.angles, hist_at )) + hv.Path(xsarsea.gradients.circ_hist(hist_at))"
    ]
   },
@@ -272,7 +272,7 @@
    "source": [
     "# background image for vectorfield\n",
     "s0 = sar_ds['sigma0_detrend'].sel(pol='VV')\n",
-    "hv_img = rasterize(hv.Image(s0, kdims=['xtrack', 'atrack']).opts(cmap='gray',clim=(0,np.nanpercentile(s0,95))))\n",
+    "hv_img = rasterize(hv.Image(s0, kdims=['sample', 'line']).opts(cmap='gray',clim=(0,np.nanpercentile(s0,95))))\n",
     "\n",
     "\n",
     "plot_mean_smooth = xsarsea.gradients.PlotGradients(hist_mean_smooth)\n",
