--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -68,9 +68,9 @@
    "source": [
     "## Get ancillary wind\n",
     "\n",
-    "Ecmwf wind is stored in owi file in *geographical* (deg N/S) convention. `xsarsea.windspeed` need it relative to *xtrack* (ie antenna), as a complex number.\n",
+    "Ecmwf wind is stored in owi file in *geographical* (deg N/S) convention. `xsarsea.windspeed` need it relative to *sample* (ie antenna), as a complex number.\n",
     "\n",
-    "We use [xsarsea.dir_geo_to_xtrack](../basic_api.rst#xsarsea.dir_geo_to_xtrack) to convert `sarwing_ds.owiEcmwfWindDirection` (deg) to radians, relative to xtrack, using `sarwing_ds.owiHeading`\n"
+    "We use [xsarsea.dir_geo_to_sample](../basic_api.rst#xsarsea.dir_geo_to_sample) to convert `sarwing_ds.owiEcmwfWindDirection` (deg) to radians, relative to sample, using `sarwing_ds.owiHeading`\n"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "owi_ecmwf_wind = sarwing_ds.owiEcmwfWindSpeed * np.exp(1j* xsarsea.dir_geo_to_xtrack(sarwing_ds.owiEcmwfWindDirection, sarwing_ds.owiHeading))\n",
+    "owi_ecmwf_wind = sarwing_ds.owiEcmwfWindSpeed * np.exp(1j* xsarsea.dir_geo_to_sample(sarwing_ds.owiEcmwfWindDirection, sarwing_ds.owiHeading))\n",
     "sarwing_ds = xr.merge([\n",
     "    sarwing_ds,\n",
     "    owi_ecmwf_wind.to_dataset(name='owi_ancillary_wind'),\n",
@@ -98,9 +98,9 @@
     "\n",
     "We check that ancillary wind is correct, by plotting the wind speed, the wind direction, and the wind direction components.\n",
     "\n",
-    "The *xtrack* component increase with *xtrack* axis, and *atrack* component increase with *atrack*.\n",
+    "The *sample* component increase with *sample* axis, and *line* component increase with *line*.\n",
     "\n",
-    "Note that we have to use `kdims=['xtrack','atrack']` to properly display the vectorfield, because memory order `['xtrack','atrack']` is geographycally transposed "
+    "Note that we have to use `kdims=['sample','line']` to properly display the vectorfield, because memory order `['sample','line']` is geographycally transposed "
    ]
   },
   {
@@ -110,22 +110,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub_sarwing_ds = sarwing_ds.isel(atrack=slice(None, None, 10), xtrack=slice(None, None, 10))\n",
+    "sub_sarwing_ds = sarwing_ds.isel(line=slice(None, None, 10), sample=slice(None, None, 10))\n",
     "\n",
     "vectorfield = hv.VectorField(\n",
     "    (\n",
-    "        sub_sarwing_ds.xtrack, sub_sarwing_ds.atrack,\n",
-    "        xsarsea.dir_geo_to_xtrack(sub_sarwing_ds.owiEcmwfWindDirection, sub_sarwing_ds.owiHeading),\n",
+    "        sub_sarwing_ds.sample, sub_sarwing_ds.line,\n",
+    "        xsarsea.dir_geo_to_sample(sub_sarwing_ds.owiEcmwfWindDirection, sub_sarwing_ds.owiHeading),\n",
     "        sub_sarwing_ds.owiEcmwfWindSpeed\n",
     "    )\n",
     ")\n",
     "\n",
-    "owi_ecmwf_wind_xtrack = np.real(owi_ecmwf_wind)\n",
-    "owi_ecmwf_wind_atrack = np.imag(owi_ecmwf_wind)\n",
+    "owi_ecmwf_wind_sample = np.real(owi_ecmwf_wind)\n",
+    "owi_ecmwf_wind_line = np.imag(owi_ecmwf_wind)\n",
     "(\n",
-    "    hv.Image(sarwing_ds.owiEcmwfWindSpeed, kdims=['xtrack','atrack']).opts(title='speed and dir', clim=(0,50), cmap='jet') * vectorfield\n",
-    "    + hv.Image(owi_ecmwf_wind_xtrack, kdims=['xtrack','atrack']).opts(title='xtrack component',cmap='bwr') * vectorfield\n",
-    "    + hv.Image(owi_ecmwf_wind_atrack, kdims=['xtrack','atrack']).opts(title='atrack component',cmap='bwr') * vectorfield\n",
+    "    hv.Image(sarwing_ds.owiEcmwfWindSpeed, kdims=['sample','line']).opts(title='speed and dir', clim=(0,50), cmap='jet') * vectorfield\n",
+    "    + hv.Image(owi_ecmwf_wind_sample, kdims=['sample','line']).opts(title='sample component',cmap='bwr') * vectorfield\n",
+    "    + hv.Image(owi_ecmwf_wind_line, kdims=['sample','line']).opts(title='line component',cmap='bwr') * vectorfield\n",
     ").opts(title='Direction component in standard convention')"
    ]
   },
@@ -136,7 +136,7 @@
    "source": [
     "### Directions in gmf or lut convention\n",
     "\n",
-    "In gmf or lut, the xtrack wind direction component is **negative** if the wind vector is in the same direction as increasing xtrack, and atrack component is  **positive**  if if the wind vector is in the same direction as increasing atrack.\n",
+    "In gmf or lut, the sample wind direction component is **negative** if the wind vector is in the same direction as increasing sample, and line component is  **positive**  if if the wind vector is in the same direction as increasing line.\n",
     "\n",
     "Switching to one convention to another can be done with `-np.conj(complex_dir)`\n",
     "\n",
@@ -151,9 +151,9 @@
    "outputs": [],
    "source": [
     "(\n",
-    "    hv.Image(sarwing_ds.owiEcmwfWindSpeed, kdims=['xtrack','atrack']).opts(title='speed and dir', clim=(0,50), cmap='jet') * vectorfield\n",
-    "    + hv.Image(-owi_ecmwf_wind_xtrack, kdims=['xtrack','atrack']).opts(title='xtrack component',cmap='bwr') * vectorfield\n",
-    "    + hv.Image(owi_ecmwf_wind_atrack, kdims=['xtrack','atrack']).opts(title='atrack component',cmap='bwr') * vectorfield\n",
+    "    hv.Image(sarwing_ds.owiEcmwfWindSpeed, kdims=['sample','line']).opts(title='speed and dir', clim=(0,50), cmap='jet') * vectorfield\n",
+    "    + hv.Image(-owi_ecmwf_wind_sample, kdims=['sample','line']).opts(title='sample component',cmap='bwr') * vectorfield\n",
+    "    + hv.Image(owi_ecmwf_wind_line, kdims=['sample','line']).opts(title='line component',cmap='bwr') * vectorfield\n",
     ").opts(title='Direction component in gmf or lut convention')"
    ]
   },
@@ -199,10 +199,10 @@
     "windspeed_diff =np.abs(windspeed_co) - sarwing_ds.owiWindSpeed_Tab_copol\n",
     "(\n",
     "    (\n",
-    "        hv.Image(np.abs(windspeed_co), kdims=['xtrack','atrack']).opts(title='xsarsea') \n",
-    "        + hv.Image(sarwing_ds.owiWindSpeed_Tab_copol, kdims=['xtrack','atrack']).opts(title='sarwing' )\n",
+    "        hv.Image(np.abs(windspeed_co), kdims=['sample','line']).opts(title='xsarsea') \n",
+    "        + hv.Image(sarwing_ds.owiWindSpeed_Tab_copol, kdims=['sample','line']).opts(title='sarwing' )\n",
     "    ).opts(hv.opts.Image(cmap='jet', clim=(0,50))) \n",
-    "    + hv.Image(windspeed_diff, kdims=['xtrack','atrack']).opts(cmap='jet', clim=(-0.5,0.5), title='xsarsea-sarwing\\nmean=%.4f std=%.4f' % (np.mean(windspeed_diff), np.std(windspeed_diff)))\n",
+    "    + hv.Image(windspeed_diff, kdims=['sample','line']).opts(cmap='jet', clim=(-0.5,0.5), title='xsarsea-sarwing\\nmean=%.4f std=%.4f' % (np.mean(windspeed_diff), np.std(windspeed_diff)))\n",
     ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
    ]
   },
