--- a/docs/examples/xspec_IW_intra_and_inter_burst.ipynb
+++ b/docs/examples/xspec_IW_intra_and_inter_burst.ipynb
@@ -11,20 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf979161-8004-4b17-b722-ed7ba722027d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "slc_iw_path = '/home/datawork-cersat-public/cache/project/mpc-sentinel1/data/esa/sentinel-1a/L1/IW/S1A_IW_SLC__1S/2022/127/S1A_IW_SLC__1SDV_20220507T162411_20220507T162439_043107_0525DE_734D.SAFE/measurement/s1a-iw1-slc-vv-20220507t162411-20220507t162439-043107-0525de-004.tiff'\n",
-    "slc_iw_path = '/home/datawork-cersat-public/project/mpc-sentinel1/data/esa/sentinel-1a/L1/IW/S1A_IW_SLC__1S/2022/264/S1A_IW_SLC__1SDV_20220921T063225_20220921T063252_045099_05639C_D284.SAFE/measurement/s1a-iw2-slc-vv-20220921t063225-20220921t063251-045099-05639c-005.tiff'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1dc1c48f-ef44-4875-a8c1-0475efd2c1be",
+   "id": "38239b23-28fd-4db8-ad53-01e2db614304",
    "metadata": {
     "tags": []
    },
@@ -33,10 +20,29 @@
     "import xsarsea\n",
     "import os\n",
     "import xsar\n",
+    "import logging\n",
+    "from importlib import reload\n",
+    "reload(logging)\n",
+    "logging.basicConfig(level=logging.INFO)\n",
+    "logging.info('start notebook')\n",
     "import xsarsea.sar_slc.processing as proc\n",
     "import warnings\n",
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf979161-8004-4b17-b722-ed7ba722027d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "path = xsar.get_test_file('S1A_IW_SLC__1SDV_20170907T102951_20170907T103021_018268_01EB76_Z020.SAFE')\n",
+    "sub_swath_IDs = xsar.Sentinel1Meta(path).subdatasets\n",
+    "sub_swath_IDs"
    ]
   },
   {
@@ -56,9 +62,11 @@
    },
    "outputs": [],
    "source": [
-    "imagette_number = os.path.basename(slc_iw_path).split('-')[1].replace('iw', '')\n",
-    "fullpathsafeSLC = os.path.dirname(os.path.dirname(slc_iw_path))\n",
-    "str_gdal = 'SENTINEL1_DS:%s:IW%s' % (fullpathsafeSLC, imagette_number)\n",
+    "# imagette_number = os.path.basename(slc_iw_path).split('-')[1].replace('iw', '')\n",
+    "# fullpathsafeSLC = os.path.dirname(os.path.dirname(slc_iw_path))\n",
+    "# str_gdal = 'SENTINEL1_DS:%s:IW%s' % (fullpathsafeSLC, imagette_number)\n",
+    "str_gdal = sub_swath_IDs.index[2]\n",
+    "print(str_gdal)\n",
     "xsarobj = xsar.Sentinel1Dataset(str_gdal)\n",
     "xsarobj.add_high_resolution_variables()\n",
     "# dt = xsar.open_datatree(slc_iw_path)\n",
@@ -83,7 +91,7 @@
    },
    "outputs": [],
    "source": [
-    "inter_xs = proc.compute_subswath_interburst_xspectra(dt,nperseg={'sample':512, 'line':115})\n",
+    "inter_xs = proc.compute_subswath_interburst_xspectra(dt,nperseg={'sample':512, 'line':110})\n",
     "inter_xs"
    ]
   }
@@ -104,8 +112,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
-  }
+   "version": "3.9.13"
+  },
+  "toc-autonumbering": true
  },
  "nbformat": 4,
  "nbformat_minor": 5
