add intra burst xspec example

--- a/docs/examples/xspec_IW_intra_and_inter_burst.ipynb
+++ b/docs/examples/xspec_IW_intra_and_inter_burst.ipynb
@@ -94,6 +94,27 @@
     "inter_xs = proc.compute_subswath_interburst_xspectra(dt,nperseg={'sample':512, 'line':110})\n",
     "inter_xs"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44d6c763-0d2c-4ca7-a57c-db889a8b6180",
+   "metadata": {},
+   "source": [
+    "# cross spectrum in intra bursts parts of the IW product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bde6c67-8739-4bb2-8c15-497f46b56f07",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "intra_xs = proc.compute_subswath_intraburst_xspectra(dt)\n",
+    "intra_xs"
+   ]
   }
  ],
  "metadata": {
@@ -112,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7"
   },
   "toc-autonumbering": true
  },
