--- a/docs/examples/xspec_IW_intra_and_inter_burst.ipynb
+++ b/docs/examples/xspec_IW_intra_and_inter_burst.ipynb
@@ -50,7 +50,7 @@
    "id": "84c1d418-a654-40ac-b3d3-83274d7f8fa1",
    "metadata": {},
    "source": [
-    "## get datatree mapping of the SLC product"
+    "## get datatree with digital numbers and annotations from IW SLC product"
    ]
   },
   {
@@ -68,9 +68,10 @@
     "str_gdal = sub_swath_IDs.index[2]\n",
     "print(str_gdal)\n",
     "xsarobj = xsar.Sentinel1Dataset(str_gdal)\n",
-    "xsarobj.add_high_resolution_variables()\n",
+    "#xsarobj.add_high_resolution_variables()\n",
     "# dt = xsar.open_datatree(slc_iw_path)\n",
     "dt = xsarobj.datatree\n",
+    "dt.load()\n",
     "dt"
    ]
   },
@@ -91,7 +92,10 @@
    },
    "outputs": [],
    "source": [
-    "inter_xs = proc.compute_subswath_interburst_xspectra(dt,nperseg={'sample':512, 'line':110})\n",
+    "inter_xs = proc.compute_subswath_interburst_xspectra(dt,\n",
+    "                                        tile_width={'sample': 20.e3, 'line': 20.e3},\n",
+    "                                        tile_overlap={'sample': 10.e3, 'line': 10.e3},\n",
+    "                                        pol='VV')\n",
     "inter_xs"
    ]
   },
@@ -112,16 +116,19 @@
    },
    "outputs": [],
    "source": [
-    "intra_xs = proc.compute_subswath_intraburst_xspectra(dt)\n",
+    "intra_xs = proc.compute_subswath_intraburst_xspectra(dt, \n",
+    "                                         tile_width={'sample': 20.e3, 'line': 20.e3},\n",
+    "                                         tile_overlap={'sample': 10.e3, 'line': 10.e3},\n",
+    "                                        pol='VV',dev=True)\n",
     "intra_xs"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "xsar_oct22",
    "language": "python",
-   "name": "python3"
+   "name": "xsar_oct22"
   },
   "language_info": {
    "codemirror_mode": {
@@ -133,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   },
   "toc-autonumbering": true
  },
