fix notebook env name

--- a/docs/examples/xspec_IW_intra_and_inter_burst.ipynb
+++ b/docs/examples/xspec_IW_intra_and_inter_burst.ipynb
@@ -126,9 +126,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "xsar_oct22",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "xsar_oct22"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -140,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7"
   },
   "toc-autonumbering": true
  },
