--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -159,7 +159,9 @@
   {
    "cell_type": "markdown",
    "id": "d76c35e9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Digging into intermediate computations \n",
     "\n",
@@ -343,9 +345,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "pygments_lexer": "ipython3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
