used config file for local paths

--- a/docs/examples/windspeed_retrieval_L1.ipynb
+++ b/docs/examples/windspeed_retrieval_L1.ipynb
@@ -75,7 +75,7 @@
    "outputs": [],
    "source": [
     "safe_path = xsarsea.get_test_file(\"S1A_EW_GRDM_1SDV_20230217T002336_20230217T002412_047268_05AC30_Z005.SAFE\")\n",
-    "s1meta = xsar.Sentinel1Meta(safe_path)"
+    "s1meta = xsar.Sentinel1Meta(safe_path)\n"
    ]
   },
   {
