--- a/docs/examples/windspeed_retrieval_L1.ipynb
+++ b/docs/examples/windspeed_retrieval_L1.ipynb
@@ -107,8 +107,18 @@
     "for ecmwf_name in ['ecmwf_0100_1h' ]:\n",
     "    ecmwf_infos = s1meta.rasters.loc[ecmwf_name]\n",
     "    ecmwf_file = ecmwf_infos['get_function'](ecmwf_infos['resource'], date=datetime.datetime.strptime(s1meta.start_date, '%Y-%m-%d %H:%M:%S.%f'))\n",
-    "    ecmwf_file = xsarsea.get_test_file(ecmwf_file.split('/')[-1],iszip=False)\n",
+    "    ecmwf_file = xsarsea.get_test_file(ecmwf_file[1].split('/')[-1],iszip=False)\n",
     "    map_model = { '%s_%s' % (ecmwf_name, uv) : 'model_%s' % uv for uv in ['U10', 'V10'] }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c11446ee-eca8-401c-9d11-590e0000012a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ecmwf_infos['get_function'](ecmwf_infos['resource'], date=datetime.datetime.strptime(s1meta.start_date, '%Y-%m-%d %H:%M:%S.%f'))"
    ]
   },
   {
