--- a/docs/examples/windspeed_retrieval_L1.ipynb
+++ b/docs/examples/windspeed_retrieval_L1.ipynb
@@ -41,9 +41,18 @@
   {
    "cell_type": "markdown",
    "id": "fa29e9e0-ed13-4448-bdbe-c61a6b2f33e3",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Requirements for inversion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "214f46fe-6169-4a76-a68e-b7c8a205b5fa",
    "metadata": {},
    "source": [
-    "## Requirements for inversion\n",
     "xsar is required"
    ]
   },
@@ -109,16 +118,6 @@
     "    ecmwf_file = ecmwf_infos['get_function'](ecmwf_infos['resource'], date=datetime.datetime.strptime(s1meta.start_date, '%Y-%m-%d %H:%M:%S.%f'))\n",
     "    ecmwf_file = xsarsea.get_test_file(ecmwf_file[1].split('/')[-1],iszip=False)\n",
     "    map_model = { '%s_%s' % (ecmwf_name, uv) : 'model_%s' % uv for uv in ['U10', 'V10'] }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c11446ee-eca8-401c-9d11-590e0000012a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ecmwf_infos['get_function'](ecmwf_infos['resource'], date=datetime.datetime.strptime(s1meta.start_date, '%Y-%m-%d %H:%M:%S.%f'))"
    ]
   },
   {
@@ -218,13 +217,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Image(dataset_1000m['sigma0_ocean'].sel(pol='VH')).opts(colorbar=True,cmap='binary',width=125, height=100, tools = ['hover'], title = \"sigma0 VH\")"
+    "hv.Image(dataset_1000m['sigma0_ocean'].sel(pol='VH')).opts(colorbar=True,cmap='binary',width=425, height=400, tools = ['hover'], title = \"sigma0 VH\")"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "00eb8706-f7cc-419a-97c9-5898178926bc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Inversion"
    ]
@@ -377,9 +378,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Image(dataset_1000m.windspeed_co.compute(), label='wind speed co-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=100, width=125) + \\\n",
-    "hv.Image(dataset_1000m.windspeed_cr, label='wind speed cr-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=100, width=125) + \\\n",
-    "hv.Image(dataset_1000m.windspeed_dual.compute(), label='wind speed dual-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=100, width=125)"
+    "hv.Image(dataset_1000m.windspeed_co.compute(), label='wind speed co-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=400, width=425) + \\\n",
+    "hv.Image(dataset_1000m.windspeed_cr, label='wind speed cr-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=400, width=425) + \\\n",
+    "hv.Image(dataset_1000m.windspeed_dual.compute(), label='wind speed dual-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=400, width=425)"
    ]
   },
   {
