adding 2 variables of nrcs in product

--- a/docs/examples/windspeed_retrieval_L1.ipynb
+++ b/docs/examples/windspeed_retrieval_L1.ipynb
@@ -407,6 +407,11 @@
    "outputs": [],
    "source": [
     "# prepare dataset for netcdf export\n",
+    "\n",
+    "dataset_1000m['sigma0_ocean_VV'] = dataset_1000m['sigma0_ocean'].sel(pol='VV')\n",
+    "dataset_1000m['sigma0_ocean_VH'] = dataset_1000m['sigma0_ocean'].sel(pol='VH')\n",
+    "\n",
+    "\n",
     "black_list = ['model_U10', 'model_V10', 'digital_number', 'gamma0_raw', 'negz',\n",
     "              'azimuth_time', 'slant_range_time', 'velocity', 'range_ground_spacing',\n",
     "              'gamma0', 'time', 'sigma0', 'nesz', 'sigma0_raw', 'sigma0_ocean', 'altitude', 'elevation',\n",
