--- a/docs/examples/windspeed_retrieval_L1.ipynb
+++ b/docs/examples/windspeed_retrieval_L1.ipynb
@@ -104,8 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = {}\n",
-    "config[\"path_ecmwf_0100_1h\"] = \"/home/datawork-cersat-public/provider/ecmwf/forecast/hourly/0100deg/netcdf_light/%Y/%j/ECMWF_FORECAST_0100_%Y%m%d%H%M_10U_10V.nc\""
+    "from xsarsea.utils import _load_config\n",
+    "config = _load_config()"
    ]
   },
   {
