--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -174,11 +174,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "windspeed_co = windspeed.invert_from_model(\n",
+    "wind_co = windspeed.invert_from_model(\n",
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
     "        ancillary_wind = -np.conj(sarwing_ds.owi_ancillary_wind),\n",
-    "        model='cmod5n')\n"
+    "        model='cmod5n')\n",
+    "windspeed_co = np.abs(wind_co)"
    ]
   },
   {
@@ -292,15 +293,15 @@
     "sarwing_luts_subset_path = xsarsea.get_test_file('sarwing_luts_subset')\n",
     "windspeed.register_all_sarwing_luts(sarwing_luts_subset_path)\n",
     "\n",
-    "windspeed_co, windspeed_dual = windspeed.invert_from_model(\n",
+    "wind_co, wind_dual = windspeed.invert_from_model(\n",
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
     "        sarwing_ds.owiNrcs_cross,\n",
     "        ancillary_wind=-np.conj(sarwing_ds.owi_ancillary_wind),\n",
     "        dsig_cr = dsig_cr,\n",
     "        model=('cmod5n','cmodms1ahw'))\n",
-    "windspeed_co = np.abs(windspeed_co)\n",
-    "windspeed_dual =  np.abs(windspeed_dual)"
+    "windspeed_co = np.abs(wind_co)\n",
+    "windspeed_dual =  np.abs(wind_dual)"
    ]
   },
   {
@@ -327,18 +328,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d79a3983-5c50-4ba4-a4df-61cb6b9ef955",
+   "metadata": {},
+   "source": [
+    "## direction output"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d21b329b-0218-4b81-8994-0e9317fe11a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "winddir_dual = (90 - (np.angle(-np.conj(wind_dual),deg=True)) + sarwing_ds.owiHeading)%360\n",
+    "sub_sarwing_ds = sarwing_ds.isel(line=slice(None, None, 10), sample=slice(None, None, 10))\n",
+    "\n",
+    "vectorfield = hv.VectorField(\n",
+    "    (\n",
+    "        sub_sarwing_ds.sample, sub_sarwing_ds.line,\n",
+    "        xsarsea.dir_geo_to_sample(winddir_dual ,sub_sarwing_ds.owiHeading),\n",
+    "        np.abs(winddir_dual).isel(line=slice(None, None, 10), sample=slice(None, None, 10))\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "hv.Image(sarwing_ds.owiEcmwfWindSpeed, kdims=['sample','line']).opts(title='speed and dir', clim=(0,50), cmap='jet') * vectorfield\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4016131-62f2-4557-a57f-795741f9cad0",
+   "metadata": {},
+   "source": [
+    "## direction difference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a48cad7-f888-4d13-8df7-a9191690d7bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize_angle(diff):\n",
+    "    return (diff + 180) % 360 - 180\n",
+    "    \n",
+    "angle_diff = normalize_angle(winddir_dual - sarwing_ds.owiWindDirection_Tab_dualpol_2steps)\n",
+    "\n",
+    "(\n",
+    "    (hv.Image(winddir_dual).opts(title='xsarsea') + \n",
+    "     hv.Image(sarwing_ds.owiWindDirection_Tab_dualpol_2steps).opts(title='sarwing' )).opts(hv.opts.Image(cmap='jet', clim=(0,360))) +  \n",
+    "    hv.Image(normalize_angle(diff)).opts(cmap='jet', clim=(-1,1), title='xsarsea-sarwing\\nmean=%.4f std=%.4f' % (np.mean(angle_diff), np.std(angle_diff)))\n",
+    ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f119d92d-d982-4447-9bcf-57aa194a2138",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e8b469d-76ec-4246-a1c5-9885afe5ff32",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "pygments_lexer": "ipython3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
