--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -379,7 +379,7 @@
     "(\n",
     "    (hv.Image(winddir_dual).opts(title='xsarsea') + \n",
     "     hv.Image(sarwing_ds.owiWindDirection_Tab_dualpol_2steps).opts(title='sarwing' )).opts(hv.opts.Image(cmap='jet', clim=(0,360))) +  \n",
-    "    hv.Image(normalize_angle(diff)).opts(cmap='jet', clim=(-1,1), title='xsarsea-sarwing\\nmean=%.4f std=%.4f' % (np.mean(angle_diff), np.std(angle_diff)))\n",
+    "    hv.Image(normalize_angle(angle_diff)).opts(cmap='jet', clim=(-1,1), title='xsarsea-sarwing\\nmean=%.4f std=%.4f' % (np.mean(angle_diff), np.std(angle_diff)))\n",
     ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
    ]
   },
