--- a/docs/examples/windspeed_retrieval_L1.ipynb
+++ b/docs/examples/windspeed_retrieval_L1.ipynb
@@ -28,6 +28,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "69879cf5-1185-47e4-9407-060292b2b44e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sarwing_luts_subset_path = xsarsea.utils.get_test_file('sarwing_luts_subset')\n",
+    "windspeed.register_all_sarwing_luts(sarwing_luts_subset_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ee5ca192-3120-4a5b-b5f2-4fce5218e90f",
    "metadata": {},
    "outputs": [],
@@ -226,9 +237,9 @@
    "outputs": [],
    "source": [
     "dataset_1000m['sigma0_ocean'] = xr.where(dataset_1000m['sigma0'] <= 0, 1e-15, xsar_obj_1000m.dataset['sigma0'])\n",
-    "dataset_1000m['ancillary_wind'] = (dataset_1000m.model_U10 + 1j * dataset_1000m.model_V10) * np.exp(1j * np.deg2rad(dataset_1000m.ground_heading))\n",
-    "dataset_1000m['ancillary_wind'] = xr.where(dataset_1000m['land_mask'], np.nan, dataset_1000m['ancillary_wind'].compute()).transpose(*dataset_1000m['ancillary_wind'].dims)\n",
-    "dataset_1000m.attrs['ancillary_source'] = dataset_1000m['model_U10'].attrs['history'].split('decoded: ')[1].strip()"
+    "dataset_1000m['ancillary_wind_direction'] = (90. - np.rad2deg(np.arctan2(dataset_1000m.model_V10, dataset_1000m.model_U10)) + 180) % 360\n",
+    "dataset_1000m['ancillary_wind_speed'] = np.sqrt(dataset_1000m['model_U10']**2+dataset_1000m['model_V10']**2)\n",
+    "dataset_1000m['ancillary_wind'] = dataset_1000m.ancillary_wind_speed * np.exp(1j * xsarsea.dir_geo_to_sample(dataset_1000m.ancillary_wind_direction, dataset_1000m.ground_heading)) # ref antenna"
    ]
   },
   {
@@ -239,16 +250,6 @@
    "outputs": [],
    "source": [
     "hv.Image(dataset_1000m['sigma0_ocean'].sel(pol='VH')).opts(colorbar=True,cmap='binary',width=425, height=400, tools = ['hover'], title = \"sigma0 VH\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59603af7-4965-4b61-8c8b-bed0935f0fb4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_1000m['ancillary_wind']"
    ]
   },
   {
@@ -327,7 +328,7 @@
    "id": "20801efb-5870-47d9-8fb1-bb3e499f9a34",
    "metadata": {},
    "source": [
-    "### get windspeed in dfferent polarizations"
+    "### get windspeed & direction in dfferent polarizations"
    ]
   },
   {
@@ -337,7 +338,7 @@
     "tags": []
    },
    "source": [
-    "CO and DUAL"
+    "copol and dual polarization"
    ]
   },
   {
@@ -347,19 +348,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "windspeed_co, windspeed_dual = windspeed.invert_from_model(\n",
+    "wind_co, wind_dual = windspeed.invert_from_model(\n",
     "        dataset_1000m.incidence,\n",
     "        dataset_1000m.sigma0_ocean.isel(pol=0),\n",
     "        dataset_1000m.sigma0_ocean.isel(pol=1),\n",
-    "        #ancillary_wind=-np.conj(xsar_obj_1000m.dataset['ancillary_wind']),\n",
-    "        ancillary_wind=-dataset_1000m['ancillary_wind'],\n",
+    "        ancillary_wind=-np.conj(dataset_1000m['ancillary_wind']),\n",
     "        dsig_cr = dsig_cr,\n",
-    "        model=('cmod5n',GMF_VH_NAME))\n",
+    "        model=('cmod5n','cmodms1ahw'))\n",
     "\n",
-    "dataset_1000m[\"windspeed_co\"] = np.abs(windspeed_co)\n",
-    "dataset_1000m[\"windspeed_co\"].attrs[\"comment\"] = dataset_1000m[\"windspeed_co\"].attrs[\"comment\"].replace(\"wind speed and direction\",\"wind speed\")\n",
-    "dataset_1000m[\"windspeed_dual\"] = np.abs(windspeed_dual)\n",
-    "dataset_1000m[\"windspeed_dual\"].attrs[\"comment\"] = dataset_1000m[\"windspeed_dual\"].attrs[\"comment\"].replace(\"wind speed and direction\",\"wind speed\")"
+    "dataset_1000m[\"windspeed_co\"] = np.abs(wind_co)\n",
+    "dataset_1000m[\"windspeed_dual\"] = np.abs(wind_dual)\n",
+    "dataset_1000m['winddir_co'] = (90 - (np.angle(-np.conj(wind_co), deg=True)) + dataset_1000m.ground_heading) % 360\n",
+    "dataset_1000m['winddir_dual'] = (90 - (np.angle(-np.conj(wind_dual), deg=True)) + dataset_1000m.ground_heading) % 360"
    ]
   },
   {
@@ -370,7 +370,7 @@
     "tags": []
    },
    "source": [
-    "CR"
+    "cross polarization "
    ]
   },
   {
@@ -383,15 +383,11 @@
     "windspeed_cr = windspeed.invert_from_model(\n",
     "    dataset_1000m.incidence.values,\n",
     "    dataset_1000m.sigma0_ocean.isel(pol=1).values,\n",
-    "    #ancillary_wind=-np.conj(xsar_obj_1000m.dataset['ancillary_wind']),\n",
     "    dsig_cr = dsig_cr.values,\n",
     "    model=GMF_VH_NAME)\n",
     "\n",
-    "windspeed_cr = np.abs(windspeed_cr)\n",
-    "dataset_1000m=dataset_1000m.assign(windspeed_cr=(['line','sample'],windspeed_cr))\n",
-    "dataset_1000m.windspeed_cr.attrs['comment'] = \"wind speed inverted from model %s (%s)\" % (GMF_VH_NAME, \"VH\")\n",
-    "dataset_1000m.windspeed_cr.attrs['model'] = GMF_VH_NAME\n",
-    "dataset_1000m.windspeed_cr.attrs['units'] = 'm/s'"
+    "dataset_1000m = dataset_1000m.assign(\n",
+    "    windspeed_cross=(['line', 'sample'], windspeed_cr))"
    ]
   },
   {
@@ -399,7 +395,7 @@
    "id": "7cecc22f-f6be-43ad-bb72-0e243e3b15a9",
    "metadata": {},
    "source": [
-    "illustration"
+    "windspeeed illustration"
    ]
   },
   {
@@ -410,8 +406,56 @@
    "outputs": [],
    "source": [
     "hv.Image(dataset_1000m.windspeed_co.compute(), label='wind speed co-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=400, width=425) + \\\n",
-    "hv.Image(dataset_1000m.windspeed_cr, label='wind speed cr-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=400, width=425) + \\\n",
+    "hv.Image(dataset_1000m.windspeed_cross, label='wind speed cr-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=400, width=425) + \\\n",
     "hv.Image(dataset_1000m.windspeed_dual.compute(), label='wind speed dual-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=400, width=425)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9032dedb-1197-4080-a7f7-744dfee0f56d",
+   "metadata": {},
+   "source": [
+    "winddir illustration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f1afe46-e5f0-43d0-b04f-d81d525d4f19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub_ds = dataset_1000m.sel(pol='VV').isel(sample=slice(None, None, 10), line=slice(None, None, 10))\n",
+    "\n",
+    "vectorfield = hv.VectorField(\n",
+    "    (\n",
+    "        sub_ds.sample, sub_ds.line,\n",
+    "        xsarsea.dir_geo_to_sample(sub_ds.winddir_dual,sub_ds.ground_heading),\n",
+    "        sub_ds.windspeed_dual\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "hv.Image(dataset_1000m.windspeed_dual, kdims=['sample','line']).opts(title='speed and dir', clim=(0,50), cmap='jet') * vectorfield\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79de289d-86e5-448f-a29e-eaee0cc49fab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub_ds = dataset_1000m.sel(pol='VV').isel(sample=slice(None, None, 10), line=slice(None, None, 10))\n",
+    "\n",
+    "vectorfield = hv.VectorField(\n",
+    "    (\n",
+    "        sub_ds.sample, sub_ds.line,\n",
+    "        xsarsea.dir_geo_to_sample(sub_ds.ancillary_wind_direction,sub_ds.ground_heading),\n",
+    "        sub_ds.ancillary_wind_speed\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "hv.Image(dataset_1000m.ancillary_wind_speed, kdims=['sample','line']).opts(title='ECMWF speed and dir', clim=(0,50), cmap='jet') * vectorfield\n"
    ]
   },
   {
@@ -467,10 +511,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_1000m['ancillary_wind_spd'] = np.abs(dataset_1000m['ancillary_wind'])\n",
-    "dataset_1000m=dataset_1000m.assign(ancillary_wind_dir=(['line','sample'],np.angle(dataset_1000m['ancillary_wind']))) \n",
-    "#dataset_1000m['ancillary_wind_dir'] = xr.ufuncs.angle(dataset_1000m['ancillary_wind'])\n",
-    "#dataset_1000m['ancillary_wind_dir'].attrs['comment'] = 'angle in radians, anticlockwise, 0=xtrack'\n",
     "del dataset_1000m['ancillary_wind']"
    ]
   },
@@ -482,33 +522,13 @@
    "outputs": [],
    "source": [
     "ds_1000 = dataset_1000m.compute()\n",
-    "ds_1000.attrs['footprint'] = str(xsar_obj_1000m.dataset.attrs['footprint'])\n",
-    "# encode gcps as json string\n",
-    "import json\n",
-    "class JSONEncoder(json.JSONEncoder):\n",
-    "    def default(self, obj):\n",
-    "        if isinstance(obj, np.integer):\n",
-    "            return int(obj)\n",
-    "\n",
-    "json_gcps = json.dumps(json.loads(json.dumps(ds_1000.line.spatial_ref.gcps,cls=JSONEncoder)))\n",
-    "ds_1000['line']['spatial_ref'].attrs['gcps'] = json_gcps\n",
-    "ds_1000['sample']['spatial_ref'].attrs['gcps'] = json_gcps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38c5258f-9b0a-4b8f-bbc9-964c357a92cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "ds_1000"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5c112c7-ee96-40f8-8935-037b746b3629",
+   "id": "38c5258f-9b0a-4b8f-bbc9-964c357a92cb",
    "metadata": {},
    "outputs": [],
    "source": [
