--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -401,7 +401,7 @@
     "def normalize_angle(diff):\n",
     "    return (diff + 180) % 360 - 180\n",
     "    \n",
-    "angle_diff = normalize_angle(winddir_dual - sarwing_ds.owiWindDirection_Tab_dualpol_2steps)\n",
+    "angle_diff = normalize_angle(sarwing_ds[\"winddir_dual\"] - sarwing_ds.owiWindDirection_Tab_dualpol_2steps)\n",
     "\n",
     "(\n",
     "    (hv.Image(sarwing_ds[\"winddir_dual\"]).opts(title='xsarsea') + \n",
