minor changes ; LUT def high resolution

--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -55,7 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sarwing_owi_file = xsarsea.get_test_file('s1a-iw-owi-xx-20210909t130650-20210909t130715-039605-04AE83.nc')\n",
+    "#sarwing_owi_file = xsarsea.get_test_file('s1a-iw-owi-xx-20210909t130650-20210909t130715-039605-04AE83.nc')\n",
+    "sarwing_owi_file = \"/home/vincelhx/Documents/autoentreprise/IFREMER/s1a-iw-owi-xx-20210909t130650-20210909t130715-039605-04AE83.nc\"\n",
     "sarwing_ds = xsarsea.read_sarwing_owi(sarwing_owi_file)\n",
     "sarwing_ds"
    ]
@@ -177,7 +178,7 @@
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
     "        ancillary_wind = -np.conj(sarwing_ds.owi_ancillary_wind),\n",
-    "        model='cmod5n')\n",
+    "        model='nc_lut_gmf_cmod5n')\n",
     "windspeed_co = np.abs(wind_co)"
    ]
   },
@@ -187,6 +188,26 @@
    "metadata": {},
    "source": [
     "## differences with sarwing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83e827c2-f5e0-4719-9463-790aed44d93d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sarwing_ds.sel(line=152).sel(sample=59).owiHeading.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "607e8ed3-41ce-49af-8e5c-be6a128933de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xsarsea.windspeed.available_models()"
    ]
   },
   {
@@ -202,7 +223,39 @@
     "        hv.Image(np.abs(windspeed_co), kdims=['sample','line']).opts(title='xsarsea') \n",
     "        + hv.Image(sarwing_ds.owiWindSpeed_Tab_copol, kdims=['sample','line']).opts(title='sarwing' )\n",
     "    ).opts(hv.opts.Image(cmap='jet', clim=(0,50))) \n",
-    "    + hv.Image(windspeed_diff, kdims=['sample','line']).opts(cmap='jet', clim=(-0.5,0.5), title='xsarsea-sarwing\\nmean=%.4f std=%.4f' % (np.mean(windspeed_diff), np.std(windspeed_diff)))\n",
+    "    + hv.Image(windspeed_diff, kdims=['sample','line']).opts(cmap='jet', clim=(-0.005,0.005), title='xsarsea-sarwing\\nmean=%.4f std=%.4f' % (np.mean(windspeed_diff), np.std(windspeed_diff)))\n",
+    ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42e17d14-9c82-49d2-af81-b4077bdaeb07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"max diff:\",np.nanmax(np.abs(windspeed_diff)),\"mean diff:\", np.mean(windspeed_diff).values,\"std : \", np.std(windspeed_diff).values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4322b65b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize_angle(diff):\n",
+    "    return (diff + 180) % 360 - 180\n",
+    "\n",
+    "sarwing_ds[\"winddir_co\"] = (90 - (np.angle(-np.conj(wind_co),deg=True)) + sarwing_ds.owiHeading)%360\n",
+    "sub_sarwing_ds = sarwing_ds.isel(line=slice(None, None, 10), sample=slice(None, None, 10))\n",
+    "\n",
+    "angle_diff = normalize_angle(sarwing_ds[\"winddir_co\"] - sarwing_ds.owiWindDirection_Tab_copol)\n",
+    "\n",
+    "(\n",
+    "    (hv.Image(sarwing_ds[\"winddir_co\"]).opts(title='xsarsea') + \n",
+    "     hv.Image(sarwing_ds.owiWindDirection_Tab_copol).opts(title='sarwing' )).opts(hv.opts.Image(cmap='jet', clim=(0,360))) +  \n",
+    "    hv.Image(normalize_angle(angle_diff)).opts(cmap='jet', clim=(-5,5), title='xsarsea-sarwing\\nmean=%.4f std=%.4f' % (np.mean(angle_diff), np.std(angle_diff)))\n",
     ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
    ]
   },
@@ -225,7 +278,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nc_luts_path = xsarsea.get_test_file('xsarsea_luts')\n",
+    "#nc_luts_path = xsarsea.get_test_file('xsarsea_luts')\n",
+    "nc_luts_path = \"/home/vincelhx/Documents/autoentreprise/IFREMER/xsarsea_luts\"\n",
     "windspeed.register_all_nc_luts(nc_luts_path)"
    ]
   },
@@ -271,6 +325,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "592300ca-c41d-416e-aca8-e246ec497167",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.nanmax(np.abs(windspeed_diff)),np.mean(windspeed_diff),np.std(windspeed_diff)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "353cb230-406e-466b-a85b-af69530c155f",
    "metadata": {},
@@ -285,12 +349,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ab1f5b6f-1be7-4122-9be8-5af0991ed960",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sarwing_luts_subset_path = xsarsea.get_test_file('sarwing_luts_subset')\n",
+    "sarwing_luts_subset_path = \"/home/vincelhx/Documents/autoentreprise/IFREMER/sarwing_luts_subset\"\n",
+    "windspeed.register_all_sarwing_luts(sarwing_luts_subset_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "af0841b0-b5a4-42d8-994d-360cecd32797",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sarwing_luts_subset_path = xsarsea.get_test_file('sarwing_luts_subset')\n",
-    "windspeed.register_all_sarwing_luts(sarwing_luts_subset_path)\n",
     "\n",
     "wind_co, wind_dual = windspeed.invert_from_model(\n",
     "        sarwing_ds.owiIncidenceAngle,\n",
@@ -302,6 +376,14 @@
     "windspeed_co = np.abs(wind_co)\n",
     "windspeed_dual =  np.abs(wind_dual)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f500e621-ffd9-41c9-bb9b-68f7aba5cf79",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -321,8 +403,8 @@
     "windspeed_diff = windspeed_dual - sarwing_ds.owiWindSpeed_Tab_dualpol_2steps\n",
     "(\n",
     "    (hv.Image(windspeed_dual).opts(title='xsarsea') + \n",
-    "     hv.Image(sarwing_ds.owiWindSpeed_Tab_dualpol_2steps).opts(title='sarwing' )).opts(hv.opts.Image(cmap='jet', clim=(0,50))) +  \n",
-    "    hv.Image(windspeed_diff).opts(cmap='jet', clim=(-0.5,0.5), title='xsarsea-sarwing\\nmean=%.4f std=%.4f' % (np.mean(windspeed_diff), np.std(windspeed_diff)))\n",
+    "     hv.Image(sarwing_ds.owiWindSpeed_Tab_dualpol_2steps).opts(title='reference' )).opts(hv.opts.Image(cmap='jet', clim=(0,50))) +  \n",
+    "    hv.Image(windspeed_diff).opts(cmap='jet', clim=(-0.5,0.5), title='xsarsea-reference\\nmean=%.4f std=%.4f' % (np.mean(windspeed_diff), np.std(windspeed_diff)))\n",
     ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
    ]
   },
@@ -357,10 +439,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "974eaccb-619a-4316-b8d0-3e751d4e964d",
+   "id": "d1db2cf4",
    "metadata": {},
    "source": [
-    "### sarwing direction output"
+    "## sarwing direction output"
    ]
   },
   {
@@ -405,47 +487,15 @@
     "\n",
     "(\n",
     "    (hv.Image(sarwing_ds[\"winddir_dual\"]).opts(title='xsarsea') + \n",
-    "     hv.Image(sarwing_ds.owiWindDirection_Tab_dualpol_2steps).opts(title='sarwing' )).opts(hv.opts.Image(cmap='jet', clim=(0,360))) +  \n",
-    "    hv.Image(normalize_angle(angle_diff)).opts(cmap='jet', clim=(-5,5), title='xsarsea-sarwing\\nmean=%.4f std=%.4f' % (np.mean(angle_diff), np.std(angle_diff)))\n",
+    "     hv.Image(sarwing_ds.owiWindDirection_Tab_dualpol_2steps).opts(title='reference' )).opts(hv.opts.Image(cmap='jet', clim=(0,360))) +  \n",
+    "    hv.Image(normalize_angle(angle_diff)).opts(cmap='jet', clim=(-5,5), title='xsarsea-reference\\nmean=%.4f std=%.4f' % (np.mean(angle_diff), np.std(angle_diff)))\n",
     ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa425555-299c-4ce2-8987-5e27fd8d0af8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.angle(wind_co)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4c10815-be94-4470-9fe6-1760c82bacc8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wphi_co = 15.0\n",
-    "wspd_co = 30\n",
-    "sol = wspd_co * np.exp(1j * np.deg2rad(wphi_co))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c321f8c9-fd00-4d1c-a7e4-058ccb81df52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.rad2deg(np.angle(sol))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f408e45f-b188-4937-9725-8daacb6629b2",
+   "id": "babf36b7",
    "metadata": {},
    "outputs": [],
    "source": []
