--- a/docs/examples/gmfs_and_luts.ipynb
+++ b/docs/examples/gmfs_and_luts.ipynb
@@ -70,7 +70,7 @@
    "source": [
     "### Adding netcdf models (LUT)\n",
     "\n",
-    "Netcdf models are not available by default, because they needs to be loaded from external file with [xsarsea.windspeed.register_all_nc_luts](../basic_api.rst#xsarsea.windspeed.register_all_nc_luts)\n"
+    "Netcdf models are not available by default, because they needs to be loaded from external file with [xsarsea.windspeed.register_nc_luts](../basic_api.rst#xsarsea.windspeed.register_nc_luts)\n"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "nc_luts_path = xsar.get_test_file('xsarsea_luts')\n",
-    "windspeed.register_all_nc_luts(nc_luts_path)\n",
+    "windspeed.register_nc_luts(nc_luts_path)\n",
     "windspeed.available_models()"
    ]
   },
@@ -92,7 +92,7 @@
    "source": [
     "### Adding Sarwing models (LUT)\n",
     "\n",
-    "Sarwing model are not available by default, because they needs to be loaded from external file with [xsarsea.windspeed.register_all_sarwing_luts](../basic_api.rst#xsarsea.windspeed.register_all_sarwing_luts)\n",
+    "Sarwing model are not available by default, because they needs to be loaded from external file with [xsarsea.windspeed.register_sarwing_luts](../basic_api.rst#xsarsea.windspeed.register_sarwing_luts)\n",
     "\n",
     "A basic subset of sarwing lut can be retrieved with `xsar.get_test_file('sarwing_luts_subset')`. \n",
     "\n",
@@ -107,7 +107,7 @@
    "outputs": [],
    "source": [
     "sarwing_luts_subset_path = xsar.get_test_file('sarwing_luts_subset')\n",
-    "windspeed.register_all_sarwing_luts(sarwing_luts_subset_path)\n",
+    "windspeed.register_sarwing_luts(sarwing_luts_subset_path)\n",
     "windspeed.available_models()"
    ]
   },
