--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -268,7 +268,7 @@
     "\n",
     "Sarwing crosspol inversion is done with model `cmodms1ahw`, that is only available from lut.\n",
     "\n",
-    "So we use [xsarsea.windspeed.register_all_nc_luts](../basic_api.rst#xsarsea.windspeed.register_all_nc_luts) to register this lut.\n"
+    "So we use [xsarsea.windspeed.register_nc_luts](../basic_api.rst#xsarsea.windspeed.register_all_nc_luts) to register this lut.\n"
    ]
   },
   {
@@ -280,7 +280,7 @@
    "source": [
     "#nc_luts_path = xsarsea.get_test_file('xsarsea_luts')\n",
     "nc_luts_path = \"/home/vincelhx/Documents/autoentreprise/IFREMER/xsarsea_luts\"\n",
-    "windspeed.register_all_nc_luts(nc_luts_path)"
+    "windspeed.register_nc_luts(nc_luts_path)"
    ]
   },
   {
@@ -355,7 +355,7 @@
    "source": [
     "#sarwing_luts_subset_path = xsarsea.get_test_file('sarwing_luts_subset')\n",
     "sarwing_luts_subset_path = \"/home/vincelhx/Documents/autoentreprise/IFREMER/sarwing_luts_subset\"\n",
-    "windspeed.register_all_sarwing_luts(sarwing_luts_subset_path)\n"
+    "windspeed.register_sarwing_luts(sarwing_luts_subset_path)\n"
    ]
   },
   {
