--- a/docs/examples/windspeed_retrieval_L1.ipynb
+++ b/docs/examples/windspeed_retrieval_L1.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "sarwing_luts_subset_path = xsarsea.utils.get_test_file('sarwing_luts_subset')\n",
-    "windspeed.register_all_sarwing_luts(sarwing_luts_subset_path)"
+    "windspeed.register_sarwing_luts(sarwing_luts_subset_path)"
    ]
   },
   {
